--- a/Python.ipynb
+++ b/Python.ipynb
@@ -23,18 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "지코바치밥\n",
-      "[2, 7, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -53,6 +44,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for i in range(2, 10):\n",
+    "    print(f\"={i}단=\")\n",
+    "    for j in range(1, 10):\n",
+    "        print(f\"{i} * {j} = {i * j}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# while\n",
     "n = 0\n",
     "\n",
@@ -63,25 +66,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "돼지불백\n",
-      "설렁탕\n",
-      "지코바치밥\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for\n",
     "lunch = [\"돼지불백\", \"설렁탕\", \"지코바치밥\"]\n",
     "\n",
     "for i in lunch:\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[44, 31, 40, 13, 30, 32]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 로또 자동추점기\n",
+    "# 번호 범위는 1 ~ 45\n",
+    "# 6개의 숫자 뽑아서 출력\n",
+    "\n",
+    "#반복문 없이 (반복문은 번호 중복 가능성)\n",
+    "import random\n",
+    "numbers = range(1, 46)\n",
+    "\n",
+    "lotto = random.sample(numbers, 6)\n",
+    "\n",
+    "print(lotto)\n"
    ]
   }
  ],
